# django-scroll-to-top

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.ru.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.ru.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  LICENSE  README.md  README.ru.md  SECURITY.md  SECURITY.ru.md  STRUCTURE.md  THIRD_PARTY_LICENSES.md  conda.txt  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  tox.ini  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
demo/: README.md  README.ru.md  manage.py
demo/project/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
demo/static/demo/: admin-language-switcher.css  cookie-module.css
demo/templates/admin/: base_site.html
demo/templates/demo/: _cookie_banner.html  base.html  collection_detail.html  cookie_preferences.html  home.html  obstacles.html
docs/: README.md  README.ru.md
docs/ai/: README.md  README.ru.md  icons.md  integration.md  presentation.md  runtime.md
docs/en/: README.md  accessibility.md  configuration.md  demo.md  diagnostics.md  invariants.md  migration.md  operations-admin.md  overview.md  presentation.md  quickstart.md  runtime.md  security-csp.md  testing.md  type-checking.md
docs/i18n/: README.md  README.ru.md
docs/integration/: django-cookies-152fz.md
docs/recipes/: floating-widget-collision.md
docs/ru/: README.md  accessibility.md  configuration.md  demo.md  diagnostics.md  invariants.md  migration.md  operations-admin.md  overview.md  presentation.md  quickstart.md  runtime.md  security-csp.md  testing.md  type-checking.md
src/django_scroll_to_top/: __init__.py  admin.py  admin_preview.py  apps.py  checks.py  contrast.py  forms.py  models.py  presentation.py  renderer.py  services.py  settings.py  signals.py  site_config.py  styles.py  urls.py  views.py
src/django_scroll_to_top/icons/: __init__.py  recolor.py  registry.py  sanitizer.py
src/django_scroll_to_top/icons/tabler/: __init__.py  manifest.json
src/django_scroll_to_top/management/commands/: scroll_to_top_check_contrast.py  scroll_to_top_diagnose.py
src/django_scroll_to_top/migrations/: 0001_initial.py  0002_derive_published_revision_from_status.py
src/django_scroll_to_top/static/django_scroll_to_top/: admin-enhancements.css  admin-enhancements.js  admin-icon-picker.css  admin-icon-picker.js  (+8 more)
src/django_scroll_to_top/templatetags/: scroll_to_top.py
tests/: settings.py  test_accessibility.py  test_admin_integration.py  test_admin_preview.py  test_app.py  test_base_fields.py  test_collision_contract.py  test_css_contract.py  test_diagnostics.py  test_dismissal.py  test_hooks.py  test_lifecycle.py  test_localization.py  test_obstacle_adapter.py  test_registry.py  test_renderer.py  test_runtime_contract.py  test_security.py  test_site_config.py  test_styling.py  test_svg_sanitizer.py  test_uploaded_icon_admin.py  test_visibility_scroll.py  urls.py  views.py
tools/: minify_assets.py  smoke_install.py
(+8 files in other folders)
