[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-scroll-to-top"
version = "0.1.0"
description = "Accessible and configurable scroll-to-top controls for Django sites and Django Admin"
authors = [
    { name = "kroxiksut", email = "fmalkov91@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "django",
    "scroll-to-top",
    "back-to-top",
    "scroll",
    "go-to-top",
    "accessibility",
    "a11y",
    "wcag",
    "django-admin",
    "ui",
    "frontend",
    "csp",
]
dependencies = [
    "Django>=4.2,<7",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/kroxiksut/django-scroll-to-top"
Source = "https://github.com/kroxiksut/django-scroll-to-top"
Documentation = "https://github.com/kroxiksut/django-scroll-to-top/tree/main/docs"
Changelog = "https://github.com/kroxiksut/django-scroll-to-top/blob/main/CHANGELOG.md"
Issues = "https://github.com/kroxiksut/django-scroll-to-top/issues"

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-django>=4.8,<5",
]
dev = [
    "ruff>=0.11,<1",
    "pyright>=1.1.390,<2",
    "django-stubs>=4.2,<6",
    "build>=1.2,<2",
    "twine>=5,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
django_scroll_to_top = [
    "py.typed",
    "icons/tabler/LICENSE.tabler.txt",
    "icons/tabler/manifest.json",
    "icons/tabler/outline/*.svg",
    "icons/tabler/filled/*.svg",
    "templates/django_scroll_to_top/admin_preview.html",
    "templates/django_scroll_to_top/*.html",
    "templates/django_scroll_to_top/includes/*.html",
    "templates/admin/base_site.html",
    "templates/admin/django_scroll_to_top/scrolltoprevision/*.html",
    "static/django_scroll_to_top/*.css",
    "static/django_scroll_to_top/*.js",
    "static/django_scroll_to_top/*.d.ts",
    "locale/*/LC_MESSAGES/*.mo",
    "locale/*/LC_MESSAGES/*.po",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.ruff.lint.per-file-ignores]
"src/**/migrations/*.py" = ["E501"]
